[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mapp4wh-env"
version = "0.1.0"
description = "Multi-Agent Wire Harness Routing – Gymnasium Environment (MuJoCo)"
requires-python = ">=3.10"
dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.24",
    "mujoco>=3.0",
    "stable-baselines3>=2.0",
    "imageio[ffmpeg]>=2.28",
    "torch>=2.0",
]

[tool.setuptools]
py-modules = [
    "wire_harness_env",
    "environment",
    "mover",
    "config",
    "calculations",
    "xml_utils",
]

[tool.setuptools.package-data]
"*" = ["data/**/*.xml"]
